Redesign data.html

--- a/demo/src/main/resources/data.html
+++ b/demo/src/main/resources/data.html
@@ -1,6 +1,48 @@
-<root>
-	<movie><title><a href="/first-movie.html">First movie</a></title><episode><a href="/first-movie/1/13.html">Серия 13</a></episode><date>Сегодня, 12:23</date></movie>
-	<movie><title><a href="/first-movie.html">First movie</a></title><episode><a href="/first-movie/1/12.html">Серия 12</a></episode><date>Вчера, 11:45</date></movie>
-	<movie><title><a href="/second-movie.html">Second movie</a></title><episode><a href="/second-movie/2/6.html">Сезон 2, Серия 6</a></episode><date>Вчера, 22:15</date></movie> 
-	<movie><title><a href="/second-movie.html">Second movie</a></title><episode><a href="/second-movie/2/7.html">Сезон 2, Серия 7</a></episode><date>Новая серия в 22:43</date></movie> 
-</root>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Movies</title>
+</head>
+<body>
+<table>
+    <thead>
+    <tr>
+        <th colspan="3">New episodes</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td><a href="/first-movie.html">First movie</a></td>
+        <td><a href="/first-movie/1/13.html">Серия 13</a></td>
+        <td>Сегодня, 12:23</td>
+    </tr>
+    <tr>
+        <td><a href="/first-movie.html">First movie</a></td>
+        <td><a href="/first-movie/1/12.html">Серия 12</a></td>
+        <td>Вчера, 11:45</td>
+    </tr>
+    <tr>
+        <td><a href="/second-movie.html">Second movie</a></td>
+        <td><a href="/second-movie/2/6.html">Серия 6</a></td>
+        <td>Вчера, 22:15</td>
+    </tr>
+    </tbody>
+</table>
+
+<table>
+    <thead>
+    <tr>
+        <th colspan="3">Expected episodes</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td><a href="/second-movie.html">Second movie</a></td>
+        <td><a href="/second-movie/2/7.html">Серия 7</a></td>
+        <td>Новая серия в 22:43</td>
+    </tr>
+    </tbody>
+</table>
+</body>
+</html>
